<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_name"/>

    <EditText
        android:id="@+id/task_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_name"
        android:inputType="text"
        android:text="@string/task_summary"/>

    <Button
        android:id="@+id/create_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_summary"
        android:text="@string/create_task_button_text"/>
</RelativeLayout>