<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/edit_task"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"/>

    <EditText
        android:id="@+id/task_title"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/assignee_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"/>

    <ImageView
        android:id="@+id/task_attachment"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:maxHeight="300dp"
        android:scaleType="centerCrop"/>

    <ImageButton
        android:id="@+id/choose_attachment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_gallery"
        android:visibility="gone"/>

    <Button
        android:id="@+id/delete_attachment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_attachment"
        android:visibility="gone"/>

    <Button
        android:id="@+id/delete_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_task"/>

    <Button
        android:id="@+id/apply_changes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"/>
</LinearLayout>