<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/create_task"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"/>

    <EditText
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textColor="#000000"/>

    <Spinner
        android:id="@+id/assignee_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"/>

    <ImageView
        android:id="@+id/attachment_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="300dp"
        android:scaleType="centerCrop"/>

    <ImageButton
        android:id="@+id/choose_attachment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_gallery"/>

    <Button
        android:id="@+id/create_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_task_button_text"/>
</LinearLayout>